[gd_scene load_steps=11 format=3 uid="uid://b2ahhhgnjekg6"]

[ext_resource type="Script" uid="uid://ba08d0m2lj37i" path="res://Scripts/player.gd" id="1_njme2"]
[ext_resource type="PackedScene" uid="uid://cklxh70fvqhvo" path="res://Scences/bullet.tscn" id="2_5xvqy"]
[ext_resource type="Texture2D" uid="uid://0c28cq64usve" path="res://PNGs/Player_Animation.png" id="3_yfn50"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dw050"]
size = Vector2(19, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_i3pqv"]
atlas = ExtResource("3_yfn50")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hqtel"]
atlas = ExtResource("3_yfn50")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sweqy"]
atlas = ExtResource("3_yfn50")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2hs0m"]
atlas = ExtResource("3_yfn50")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jxqw"]
atlas = ExtResource("3_yfn50")
region = Rect2(32, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_dw050"]
animations = [{
"frames": [{
"duration": 0.1,
"texture": SubResource("AtlasTexture_i3pqv")
}],
"loop": false,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 0.4,
"texture": SubResource("AtlasTexture_hqtel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sweqy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hs0m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jxqw")
}],
"loop": true,
"name": &"walk",
"speed": 4.0
}]

[node name="Player" type="CharacterBody2D"]
scale = Vector2(2, 2)
script = ExtResource("1_njme2")
bullet_scene = ExtResource("2_5xvqy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.5, 0)
shape = SubResource("RectangleShape2D_dw050")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1, 0)
sprite_frames = SubResource("SpriteFrames_dw050")
animation = &"walk"
frame_progress = 0.941617

[node name="Gun" type="Node2D" parent="."]
visible = false
position = Vector2(9, 1)

[node name="HealthBar" type="TextureProgressBar" parent="."]
visible = false
offset_left = -12.0
offset_top = -21.0
offset_right = 14.0
offset_bottom = -16.0
fill_mode = 1

[node name="ShootTimer" type="Timer" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
drag_left_margin = 0.0
drag_top_margin = 0.0
drag_right_margin = 0.0
drag_bottom_margin = 0.0

[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
